# EMBSYS_LINE_CLASSROOM

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  DEVELOPMENT.md  Makefile  README.md
docs/: BusinessCase01.md  ConceptualV1.md  DesignBusiness.md  DesignSystem.md  Report.md  SystemCase01.md  diagram.json
esp32/: ESP32.md
esp32/src/: button_led.ino
esp32/src/case01/: case01.ino
line/: LINE.md  pyproject.toml
line/src/: __init__.py  database.py  handlers.py  line_client.py  main.py  webhook.py
line/src/core/: auth.py  database.py  line_client.py
line/src/v1/: api.py  handlers.py  webhook.py
scripts/: check_env.py
